<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.PageComicActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material2"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="2"
                app:cardCornerRadius="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tv_View">

                    <ImageView
                        android:id="@+id/imgThumb"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/describeImageView"
                        android:scaleType="fitXY"
                        android:src="@drawable/cover_image" />

                    <ImageButton
                        android:id="@+id/btn_Like"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginBottom="@dimen/margin"
                        android:background="@drawable/like_click"
                        android:baselineAlignBottom="true"
                        android:contentDescription="@string/describeImageView"
                        android:padding="8dp"
                        android:src="@drawable/favorite" />
                </FrameLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin"
                    android:paddingTop="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/nameComic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_header" />

                <TextView
                    android:id="@+id/tv_Update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/updateLast"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:drawableStart="@drawable/icons_author"
                    android:drawablePadding="@dimen/margin"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/tv_kind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:drawableStart="@drawable/icons_trend"
                    android:drawablePadding="@dimen/margin"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:drawableStart="@drawable/icon_tag"
                    android:drawablePadding="@dimen/margin"
                    android:gravity="center|start"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/tv_View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icons_follow"
                    android:drawablePadding="@dimen/margin"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="8dp"
                        android:text="@string/description"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/descriptionDetail" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                app:cardCornerRadius="7dp"
                app:cardElevation="7dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="8dp"
                        android:text="@string/categoryComic"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/spinnerSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/background" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvChapter"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="@dimen/margin" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
